--- a/20.浏览器输入地址按下回车.md
+++ b/20.浏览器输入地址按下回车.md
@@ -13,6 +13,6 @@
 > 11. 浏览器根据响应状态码决定如何处理这一次响应
 > 12. 浏览器根据响应头中的 `Content-Type` 字段识别响应类型，如果是 `text/html` ，则对响应体的内容进行HTML解析，否则做其他处理
 > 13. 浏览器根据响应头中的其他内容完成缓存，cookie的设置
-> 14. 浏览器开始从上到下解析 HTML，若遇到外部资源连接，则进一步请求资源
+> 14. 浏览器开始从上到下解析 HTML，若遇到外部资源连接，则**进一步请求资源**
 > 15. 解析过程中生成 `DOM Tree`，`CSSOM Tree`树 ，然后一边生成，一边把两者合并为 `rendering Tree`, 然后对渲染树的每个节点计算位置和大小生成 `layout Tree` ,最后把每个节点利用 `GPU` 绘制到屏幕
 > 16. 在解析过程中还会触发一系列的事件，比如，当 `DOM Tree` 完成后，会触发 `DOMContentLoaded` 事件，当所有资源加载完毕后会触发 `load` 事件
